Opened 14 years ago

Closed 13 years ago

#7376 closed bug (fixed)

[Tracker] crashes in BBitmap::Bounds ()

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/Development
Keywords: workspace background color depth Cc:
Blocked By: Blocking: #8323, #8516
Platform: All

Description

This is hrev40968, gcc4 hybrid.

Tracker crashes after switching from 24bit workspace with attached image as background (centered) to 32bit workspace with no background set.

Thread 9968 caused an exception: Segment violation
[...]
0x002e2e69 in BBitmap::Bounds () from /boot/system/lib/libbe.so
(gdb) bt
#0  0x002e2e69 in BBitmap::Bounds () from /boot/system/lib/libbe.so
#1  0x004fc2e1 in BPrivate::BackgroundImage::ScreenChanged () from /boot/system/lib/libtracker.so
#2  0x00510c4c in BPrivate::BDeskWindow::ScreenChanged () from /boot/system/lib/libtracker.so
#3  0x003969ef in BWindow::DispatchMessage () from /boot/system/lib/libbe.so
#4  0x003929a1 in BWindow::task_looper () from /boot/system/lib/libbe.so
#5  0x002c566c in BLooper::_task0_ () from /boot/system/lib/libbe.so
#6  0x0063ca5d in thread_entry () from /boot/system/lib/libroot.so
#7  0x70184fec in ?? ()
(gdb)

Found by mrNoisy.

Attachments (1)

76256.jpg (455.4 KB ) - added by diver 14 years ago.
wallpaper

Download all attachments as: .zip

Change History (4)

by diver, 14 years ago

Attachment: 76256.jpg added

wallpaper

comment:1 by diver, 13 years ago

Blocking: 8323 added

comment:2 by diver, 13 years ago

Blocking: 8516 added

comment:3 by stpere, 13 years ago

Resolution: fixed
Status: newclosed

fixed in hrev44125. Thanks!

Note: See TracTickets for help on using tickets.